# task3.2

./: CMakeLists.txt  README.md
myLib/: CMakeLists.txt  getnum.h  train.cpp  train.h  wagon.cpp  wagon.h
tests/: CMakeLists.txt  test.cpp  testing.cpp
